# smolcase

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh
.github/workflows/: linter.yml  release.yml
src/: config.rs  credential_manager.rs  crypto.rs  git.rs  main.rs  types.rs  ui.rs
src/commands/: add.rs  apply.rs  configure.rs  export.rs  get.rs  group.rs  import.rs  init.rs  list.rs  logout.rs  mod.rs  remove.rs  run.rs  setup.rs  status.rs  sync.rs  tutorial.rs  user.rs
web/: index.html
