[package]
name = "smolcase"
version = "1.1.0"
edition = "2024"
description = "A CLI tool for secure team secret management."
license = "MIT"
authors = ["Sabir Khan <simplysabir@gmail.com>"]
repository = "https://github.com/simplysabir/smolcase"
homepage = "https://github.com/simplysabir/smolcase"
documentation = "https://github.com/simplysabir/smolcase#readme"
keywords = ["cli", "secret", "management"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
rpassword = "7.0"
colored = "2.0"
dialoguer = "0.10"
indicatif = "0.17"
git2 = "0.18"
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
toml = "0.8"
chrono = { version = "0.4.41", features = ["serde"]}
sha2 = "0.10"
tempfile = "3.20.0"
